<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="16dp">


        <!--       Foto de perfil-->
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:src="@drawable/perfil1"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"
            android:layout_marginBottom="15dp"/>
        <!-- Nombre -->
        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:layout_marginBottom="16dp"/>

        <!-- Número de documento -->
        <EditText
            android:id="@+id/editTextDocumento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nroDocumento"
            android:inputType="number"
            android:layout_marginBottom="16dp"/>

        <!-- Correo -->
        <EditText
            android:id="@+id/editTextCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="16dp"/>

        <!-- Dirección -->
        <EditText
            android:id="@+id/editTextDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/direccion"
            android:inputType="textPostalAddress"
            android:layout_marginBottom="16dp"/>

        <!-- Celular -->
        <EditText
            android:id="@+id/editTextCelular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/celular"
            android:inputType="phone"
            android:layout_marginBottom="16dp"/>

        <!-- Fecha de nacimiento -->
        <EditText
            android:id="@+id/editTextFechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fechaNacimiento"
            android:inputType="date"
            android:layout_marginBottom="16dp"/>

        <!-- Contraseña -->
        <EditText
            android:id="@+id/editTextContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginBottom="16dp"/>

        <!-- Botón para enviar el formulario -->
        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enviar" />

    </LinearLayout>
</ScrollView>
